Fix cart count font alignment

--- a/assets/scss/woocommerce/_cart.scss
+++ b/assets/scss/woocommerce/_cart.scss
@@ -177,5 +177,6 @@
   border-radius: 50%;
 
   font-size: 16px;
-  font-family: sans-serif;
+  line-height: 1;
+  font-feature-settings: "lnum";
 }
