--- a/assets/scss/woocommerce/_mini-cart.scss
+++ b/assets/scss/woocommerce/_mini-cart.scss
@@ -70,6 +70,8 @@
     padding: 20px;
     padding-top: 0;
 
+    text-align: center;
+
     display: flex;
     flex-direction: column-reverse;;
 
