--- a/style.css
+++ b/style.css
@@ -2890,7 +2890,8 @@ iframe.instagram-media {
   justify-content: center;
   border-radius: 50%;
   font-size: 16px;
-  font-family: sans-serif; }
+  line-height: 1;
+  font-feature-settings: "lnum"; }
 
 .woocommerce-product-gallery[class][class][class] {
   margin-bottom: 0; }
@@ -3904,6 +3905,7 @@ ul.order_details[class] {
   .c-mini-cart .woocommerce-mini-cart__buttons {
     padding: 20px;
     padding-top: 0;
+    text-align: center;
     display: flex;
     flex-direction: column-reverse; }
     .c-mini-cart .woocommerce-mini-cart__buttons[class][class][class][class] > a {
